--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div class="logo">
-      <a href="landing.html"><img src="images/logo.png" alt="chaan logo"></a>
+      <a href="index.html"><img src="images/logo.png" alt="chaan logo"></a>
     </div>
     <ul class="nav">
       <li><a href="services.html">Services</a></li>
@@ -153,9 +153,9 @@
 
       <div class="links">
         <p>About Chaan</p>
-        <a href="landing.html#hero">About</a>
-        <a href="landing.html#web_features">Web features</a>
-        <a href="landing.html#contacts">Social Medias</a>
+        <a href="index.html#hero">About</a>
+        <a href="index.html#web_features">Web features</a>
+        <a href="index.html#contacts">Social Medias</a>
       </div>
     </div>
 
