--- a/ui.html
+++ b/ui.html
@@ -11,11 +11,11 @@
 <body>
   <header>
     <div class="logo">
-      <a href="landing.html"><img src="images/logo.png" alt="chaan logo"></a>
+      <a href="index.html"><img src="images/logo.png" alt="chaan logo"></a>
     </div>
     <ul class="nav">
       <li><a href="services.html">Services</a></li>
-      <li><a href="ui.html">UI/UX Design</a></li>
+      <li id="ui_hov"><a href="ui.html">UI/UX Design</a></li>
       <li><a href="web_dev.html">Website Development</a></li>
     </ul>
   </header>
@@ -70,7 +70,7 @@
     <div class="ui_choice" id="ui_choice">
       <div class="label">
         <h2>Choose a Design<br><span>and turn ideas into reality</span></h2>
-        <a class="link" href="landing.html#deals">claim discount ></a>
+        <a class="link" href="index.html#deals">claim discount ></a>
       </div>
       <div class="ui_btn options">
         <a class="cta" href="https://www.fiverr.com/chaan_biz/design-mobile-app-ui-ux">Mobile Design</a>
@@ -115,9 +115,9 @@
 
       <div class="links">
         <p>About Chaan</p>
-        <a href="landing.html#hero">About</a>
-        <a href="landing.html#web_features">Web features</a>
-        <a href="landing.html#contacts">Social Medias</a>
+        <a href="index.html#hero">About</a>
+        <a href="index.html#web_features">Web features</a>
+        <a href="index.html#contacts">Social Medias</a>
       </div>
     </div>
 
