all pages responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <div class="web_features" id="web_features">
+    <div class="web_features flex" id="web_features">
       <div class="label">
         <h2>Website Development<br> Features<br><span>every package contains the following</span></h2>
       </div>
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div class="deals" id="deals">
+    <div class="deals flex" id="deals">
       <div class="label">
         <h2>50% Discount!<br> Prepare to claim<br><span>at September 15, 2023</span></h2>
       </div>
