--- a/services.html
+++ b/services.html
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <div class="mobile">
+    <div class="mobile w_pic">
         <div class="label">
           <h2 class="name">Mobile App<br> UI / UX Design <br><span>for android and ios</span></h2>
           <a class="link" href="https://www.fiverr.com/chaanbiz/mobile-app-ui-ux-design-and-template">Mobile App Design Package ></a>
@@ -95,25 +95,27 @@
         <a class="link" href="web_dev.html">Web Development Package ></a>
       </div>
 
-      <div class="offer">
+      <div class="offer w_pic">
         <div class="image">
           <img src="images/Computer.png" alt="web3">
         </div>
 
         <div class="heading">
-          <h3>Web3 Development <br> <span>decentralized and democratic</span></h3>
+          <h3>Web3 Development<br></h3>
+          <p>decentralized and democratic</p>
           <a class="link" href="web_dev.html#web3">See Offer ></a>
         </div>
       </div>
 
-      <div class="offer right_of">
-        <div class="image">
-          <img src="images/wordpress.png" alt="wordpress">
+      <div class="offer w_pic">
+        <div class="heading">
+          <h3>Wordpress<br></h3>
+          <p>build websites and blogs</p>
+          <a class="link" href="web_dev.html#wordpress">See Offer ></a>
         </div>
 
-        <div class="heading">
-          <h3>Wordpress <br> <span>build websites and blogs</span></h3>
-          <a class="link" href="web_dev.html#wordpress">See Offer ></a>
+        <div class="image">
+          <img src="images/wordpress.png" alt="wordpress">
         </div>
       </div>
     </section>
