--- a/ui.html
+++ b/ui.html
@@ -21,7 +21,7 @@
   </header>
 
   <section class="ui">
-    <div class="hero" id="hero">
+    <div class="hero flex" id="hero">
       <div class="label">
         <h2>UI & UX Design<br><span>reach your success</span></h2>
         <p>by making your idea into reality. You're one step close to your dream</p>
@@ -32,11 +32,9 @@
     </div>
 
     <div class="wireframe" id="wireframe">
-      <div class="text">
-        <div class="label">
-          <h2>Wireframe<br><span>save time</span></h2>
-          <p>by giving your idea a visual guide to represents the skeletal framework of your website</p>
-        </div>
+      <div class="label">
+        <h2>Wireframe<br><span>save time</span></h2>
+        <p>by giving your idea a visual guide to represents the skeletal framework of your website</p>
       </div>
       <div class="image">
         <img src="images/Wireframe.png" alt="wireframe">
@@ -44,7 +42,7 @@
     </div>
 
     <div class="prototype" id="prototype">
-      <div class="text">
+      <div class="text flex">
         <div class="label">
           <h2>Prototype<br><span>test to perfect</span></h2>
           <p>by reviewing the demo of how your website will look like when it goes live</p>
@@ -56,14 +54,12 @@
     </div>
 
     <div class="redesign" id="redesign">
-      <div class="text">
-        <div class="label">
-          <h2>Redesign<br><span>hop on trends and modernity</span></h2>
-          <p>bigger chance to catch more customers or clients!</p>
-        </div>
-      </div>
       <div class="image">
         <a href="https://images.squarespace-cdn.com/content/v1/5ace1725266c0708f3759baf/1528918678556-NQ1D2W5QWZNS1OMP7O4N/image-asset.png?format=2500w"><img src="images/Redesign.png" alt="prototype"></a>
+      </div>
+      <div class="label">
+        <h2>Redesign<br><span>hop on trends and modernity</span></h2>
+        <p>bigger chance to catch more customers or clients!</p>
       </div>
     </div>
 
