responsive nav bar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="logo">
       <a href="index.html"><img src="images/logo.png" alt="chaan logo"></a>
     </div>
+    <button class="hamburger">
+      <div class="bar"></div>
+    </button>
     <ul class="nav">
       <li><a href="services.html">Services</a></li>
       <li id="ui_hov"><a href="ui.html">UI/UX Design</a></li>
@@ -21,13 +24,18 @@
     </ul>
   </header>
 
+  <nav class="mobile-nav">
+    <a href="services.html">Services</a>
+    <a href="ui.html">UI/UX Design</a>
+    <a href="web_dev.html">Website Development</a>
+  </nav>
+  
   <section class="portfolio">
     <div class="hero" id="hero">
       <div class="heading">
         <h2>Chaan</h2>
         <p>Front-end Website <br>Developer & Designer</p>
       </div>
-      
       <div class="par">
         <p>An ambitious Web Designer and Website Developer dwelling in the Philippines. She builds templates, landing pages, and websites using HTML, CSS, and JavaScript. She also use the framework React to convey a marvelous website.</p>
       </div>
