--- a/services.html
+++ b/services.html
@@ -6,18 +6,28 @@
   <title>Chaan Services</title>
   <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
+  <script src="header.js" defer></script>
 </head>
 <body>
   <header>
     <div class="logo">
       <a href="index.html"><img src="images/logo.png" alt="chaan logo"></a>
     </div>
+    <button class="hamburger">
+      <div class="bar"></div>
+    </button>
     <ul class="nav">
       <li><a href="services.html">Services</a></li>
       <li id="ui_hov"><a href="ui.html">UI/UX Design</a></li>
       <li><a href="web_dev.html">Website Development</a></li>
     </ul>
   </header>
+
+  <nav class="mobile-nav">
+    <a href="services.html">Services</a>
+    <a href="ui.html">UI/UX Design</a>
+    <a href="web_dev.html">Website Development</a>
+  </nav>
 
   <section class="services">
     <section class="user_interface">
