--- a/ui.html
+++ b/ui.html
@@ -11,23 +11,24 @@
 <body>
   <header>
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="chaan logo"></a>
+      <a href="chaan.html"><img src="images/logo.png" alt="chaan logo"></a>
     </div>
     <button class="hamburger">
       <div class="bar"></div>
     </button>
     <ul class="nav">
-      <li><a href="services.html">Services</a></li>
+      <li><a href="index.html">Services</a></li>
       <li id="ui_hov"><a href="ui.html">UI/UX Design</a></li>
       <li><a href="web_dev.html">Website Development</a></li>
     </ul>
   </header>
 
   <nav class="mobile-nav">
-    <a href="services.html">Services</a>
+    <a href="index.html">Services</a>
     <a href="ui.html">UI/UX Design</a>
     <a href="web_dev.html">Website Development</a>
   </nav>
+
   <section class="ui">
     <div class="hero flex" id="hero">
       <div class="label">
@@ -74,7 +75,7 @@
     <div class="ui_choice" id="ui_choice">
       <div class="label">
         <h2>Choose a Design<br><span>and turn ideas into reality</span></h2>
-        <a class="link" href="index.html#deals">claim discount ></a>
+        <a class="link" href="chaan.html">claim discount ></a>
       </div>
       <div class="ui_btn options">
         <a class="cta" href="https://www.fiverr.com/chaan_biz/design-mobile-app-ui-ux">Mobile Design</a>
@@ -119,9 +120,9 @@
 
       <div class="links">
         <p>About Chaan</p>
-        <a href="index.html#hero">About</a>
-        <a href="index.html#web_features">Web features</a>
-        <a href="index.html#contacts">Social Medias</a>
+        <a href="chaan.html#hero">About</a>
+        <a href="chaan.html#web_features">Web features</a>
+        <a href="chaan.html#contacts">Social Medias</a>
       </div>
     </div>
 
