--- a/web_dev.html
+++ b/web_dev.html
@@ -11,20 +11,20 @@
 <body>
   <header>
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="chaan logo"></a>
+      <a href="chaan.html"><img src="images/logo.png" alt="chaan logo"></a>
     </div>
     <button class="hamburger">
       <div class="bar"></div>
     </button>
     <ul class="nav">
-      <li><a href="services.html">Services</a></li>
+      <li><a href="index.html">Services</a></li>
       <li id="ui_hov"><a href="ui.html">UI/UX Design</a></li>
       <li><a href="web_dev.html">Website Development</a></li>
     </ul>
   </header>
 
   <nav class="mobile-nav">
-    <a href="services.html">Services</a>
+    <a href="index.html">Services</a>
     <a href="ui.html">UI/UX Design</a>
     <a href="web_dev.html">Website Development</a>
   </nav>
@@ -127,7 +127,7 @@
     <div id="call_to_action">
       <div class="label">
         <h2>Choose a Web Type<br><span>and build ideas into reality</span></h2>
-        <a class="link" href="index.html#deals">claim discount ></a>
+        <a class="link" href="chaan.html">claim discount ></a>
       </div>
       <div class="web_dev_options options">
         <a class="cta" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=CllgCJlFlbjZRLJGSzBFKvsWgSBrzZKXlPkJJjCmFPczgJXTtjkJSKxpLNpZgPpgcCGfhDRSvxV">Learning Platform</a>
@@ -172,9 +172,9 @@
 
       <div class="links">
         <p>About Chaan</p>
-        <a href="index.html#hero">About</a>
-        <a href="index.html#web_features">Web features</a>
-        <a href="index.html#contacts">Social Medias</a>
+        <a href="chaan.html#hero">About</a>
+        <a href="chaan.html#web_features">Web features</a>
+        <a href="chaan.html#contacts">Social Medias</a>
       </div>
     </div>
 
