--- a/chaan.html
+++ b/chaan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chaan Landing Page</title>
+  <title>About Chaan | Claim my discount!</title>
   <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <script defer src="counter.js" ></script>
@@ -12,20 +12,20 @@
 <body>
   <header>
     <div class="logo">
-      <a href="index.html"><img src="images/logo.png" alt="chaan logo"></a>
+      <a href="chaan.html"><img src="images/logo.png" alt="chaan logo"></a>
     </div>
     <button class="hamburger">
       <div class="bar"></div>
     </button>
     <ul class="nav">
-      <li><a href="services.html">Services</a></li>
+      <li><a href="index.html">Services</a></li>
       <li id="ui_hov"><a href="ui.html">UI/UX Design</a></li>
       <li><a href="web_dev.html">Website Development</a></li>
     </ul>
   </header>
 
   <nav class="mobile-nav">
-    <a href="services.html">Services</a>
+    <a href="index.html">Services</a>
     <a href="ui.html">UI/UX Design</a>
     <a href="web_dev.html">Website Development</a>
   </nav>
@@ -161,9 +161,9 @@
 
       <div class="links">
         <p>About Chaan</p>
-        <a href="index.html#hero">About</a>
-        <a href="index.html#web_features">Web features</a>
-        <a href="index.html#contacts">Social Medias</a>
+        <a href="chaan.html#hero">About</a>
+        <a href="chaan.html#web_features">Web features</a>
+        <a href="chaan.html#contacts">Social Medias</a>
       </div>
     </div>
 
