claim deal update

--- a/chaan.html
+++ b/chaan.html
@@ -89,8 +89,10 @@
       </div>
 
       <div class="claim_btn">
-        <p>reservation will be available at September 10, 2023</p>
-        <!-- <button>Reserve</button> -->
+        <!-- <p>reservation will be available at September 10, 2023</p> -->
+        <!-- <button>choose project for reservation</button> -->
+        <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw">Reserve</a>
+        <p>note: you'll be transferred to gmail for confirmation</p>
       </div>
     </div>
 
