--- a/chaan.html
+++ b/chaan.html
@@ -75,7 +75,7 @@
         <h2>50% Discount!<br> Prepare to claim<br><span>at September 15, 2023</span></h2>
       </div>
       
-      <!-- <p class="claim_note">claim button will be available in</p> -->
+      <p class="claim_note">claim button will be available in</p>
       <div class="count_down">
         <div class="box">
           <h2 id="day">00</h2><span>days</span>
@@ -91,11 +91,11 @@
         </div>
       </div>
 
-      <div class="claim_btn">
+      <!-- <div class="claim_btn">
         <a href="claim.html" id="claim_btn">Claim</a>
-        <!-- <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw">Reserve</a> -->
-        <!-- <p>note: you'll be transferred to gmail for confirmation</p> -->
-      </div>
+        <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw">Reserve</a> -->
+        <!-- <p>note: you'll be transferred to gmail for confirmation</p>
+      </div> -->
 
       </div>
 
