aligning text and interaction links

--- a/ui.html
+++ b/ui.html
@@ -75,7 +75,7 @@
     <div class="ui_choice" id="ui_choice">
       <div class="label">
         <h2>Choose a Design<br><span>and turn ideas into reality</span></h2>
-        <a class="link" href="chaan.html">claim discount ></a>
+        <a class="link" href="chaan.html#deals">claim discount ></a>
       </div>
       <div class="ui_btn options">
         <a class="cta" href="https://www.fiverr.com/chaan_biz/design-mobile-app-ui-ux">Mobile Design</a>
