--- a/ui.html
+++ b/ui.html
@@ -82,7 +82,7 @@
         <a class="cta" href="https://www.fiverr.com/chaan_biz/create-you-stunning-website-template">Website Design</a>
       </div>
       
-      <p>Note: You'll soon be redirected on Fiverr to make an order</p>
+      <p>Note: You'll soon be redirected to Fiverr to make an order</p>
       <div class="images">
         <img src="images/Mobile_ui.png" alt="mobile">
         <img src="images/Gun.png" alt="gun website">
