html components added update for prices

--- a/claim.html
+++ b/claim.html
@@ -38,14 +38,28 @@
         <h2>Apply Voucher to:</h2>
         <p>(select one)</p>
         <div class="choices">
-          <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=DmwnWsvCdtCwxmJbNNzGvvvSjjRzDNLmxgJKnjZXbglmmsKHFfwJbDzgFWzbmbJmFvcWZTXJMhVg" class="box">
-            <img src="images/Main.png" alt="web ui design">
-            <p>Website Design</p>
-          </a>
-          <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw" class="box">
-            <img src="images/Mobile.png" alt="mobile ui design">
-            <p>Mobile App Design</p>
-          </a>
+          <div class="web">
+            <div class="price">
+              <p>Basic: <span>$65 </span></p><p class="price"> $30</p>
+              <p>Standard: <span>$155 </span></p><p class="price"> $75</p>
+              <p>Premium: <span>$275 </span></p><p class="price"> $135</p>
+            </div>
+            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=DmwnWsvCdtCwxmJbNNzGvvvSjjRzDNLmxgJKnjZXbglmmsKHFfwJbDzgFWzbmbJmFvcWZTXJMhVg" class="box">
+              <img src="images/Main.png" alt="web ui design">
+              <p>Website Design</p>
+            </a>
+          </div>
+          <div class="mobile">
+            <div class="price">
+              <p>Basic: <span>$65 </span></p><p class="price"> $30</p>
+              <p>Standard: <span>$155 </span></p><p class="price"> $75</p>
+              <p>Premium: <span>$275 </span></p><p class="price"> $135</p>
+            </div>
+            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw" class="box">
+              <img src="images/Mobile.png" alt="mobile ui design">
+              <p>Mobile App Design</p>
+            </a>
+          </div>
         </div>
         <p>You'll be redirected on G-mail</p>
       </div>
