--- a/chaan.html
+++ b/chaan.html
@@ -75,7 +75,7 @@
         <h2>50% Discount!<br> Prepare to claim<br><span>at September 15, 2023</span></h2>
       </div>
       
-      <!-- <p class="claim_note">claim button will be available in</p> -->
+      <p class="claim_note">The discount will be available in</p>
       <div class="count_down">
         <div class="box">
           <h2 id="day">00</h2><span>days</span>
@@ -92,15 +92,50 @@
       </div>
 
       <div class="claim_btn">
-        <a href="claim.html" id="claim_btn">Claim</a>
+        <!-- <a href="claim.html" id="claim_btn">Claim</a> -->
         <!--<a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw">Reserve</a>
          <p>note: you'll be transferred to gmail for confirmation</p>-->
       </div> 
+    </div>
 
-      </div>
-
-      <div id="claim_success">
-        
+    <div class="discount">
+      <h2>This upcoming September 15!</h2>
+      <p>You'll be redirected to Fiverr for ordering</p>
+      <div class="choices">
+        <div class="web outer">
+          <div class="price">
+            <div class="basic">
+              <p>Basic <span>$65 </span></p><p id="price"> $30</p>
+            </div>
+            <div class="standard">
+              <p>Standard <span>$155 </span></p><p id="price"> $75</p>
+            </div>
+            <div class="premium">
+              <p>Premium <span>$275 </span></p><p id="price"> $135</p>
+            </div>
+          </div>
+          <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=DmwnWsvCdtCwxmJbNNzGvvvSjjRzDNLmxgJKnjZXbglmmsKHFfwJbDzgFWzbmbJmFvcWZTXJMhVg" class="box">
+            <img src="images/Main.png" alt="web ui design">
+            <p>Website Design</p>
+          </a>
+        </div>
+        <div class="mobile outer">
+          <div class="price">
+            <div class="basic">
+              <p>Basic </p><p id="price"> $5</p>
+            </div>
+            <div class="standard">
+              <p>Standard <span>$105 </span></p><p id="price"> $55</p>
+            </div>
+            <div class="premium">
+              <p>Premium <span>$195 </span></p><p id="price"> $100</p>
+            </div>
+          </div>
+          <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw" class="box">
+            <img src="images/Mobile.png" alt="mobile ui design">
+            <p>Mobile App Design</p>
+          </a>
+        </div>
       </div>
     </div>
 
