--- a/web_dev.html
+++ b/web_dev.html
@@ -127,7 +127,7 @@
     <div id="call_to_action">
       <div class="label">
         <h2>Choose a Web Type<br><span>and build ideas into reality</span></h2>
-        <a class="link" href="chaan.html#deals">claim discount ></a>
+        <a class="link" href="chaan.html#deals">see discount ></a>
       </div>
       <div class="web_dev_options options">
         <a class="cta" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=CllgCJlFlbjZRLJGSzBFKvsWgSBrzZKXlPkJJjCmFPczgJXTtjkJSKxpLNpZgPpgcCGfhDRSvxV">Learning Platform</a>
