--- a/chaan.html
+++ b/chaan.html
@@ -102,40 +102,47 @@
       <h2>This upcoming September 15!</h2>
       <p>You'll be redirected to Fiverr for ordering</p>
       <div class="choices">
-        <div class="web outer">
-          <div class="price">
-            <div class="basic">
-              <p>Basic <span>$65 </span></p><p id="price"> $30</p>
+
+        <div class="outer_most">
+          <p class="heading">Website Design</p>
+          <div class="outer">
+            <div class="price">
+              <div class="basic">
+                <p>Basic <span>$65 </span></p><p id="price"> $30</p>
+              </div>
+              <div class="standard">
+                <p>Standard <span>$155 </span></p><p id="price"> $75</p>
+              </div>
+              <div class="premium">
+                <p>Premium <span>$275 </span></p><p id="price"> $135</p>
+              </div>
             </div>
-            <div class="standard">
-              <p>Standard <span>$155 </span></p><p id="price"> $75</p>
-            </div>
-            <div class="premium">
-              <p>Premium <span>$275 </span></p><p id="price"> $135</p>
-            </div>
+            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=DmwnWsvCdtCwxmJbNNzGvvvSjjRzDNLmxgJKnjZXbglmmsKHFfwJbDzgFWzbmbJmFvcWZTXJMhVg" class="box">
+              <img src="images/Main.png" alt="web ui design">
+            </a>
           </div>
-          <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=DmwnWsvCdtCwxmJbNNzGvvvSjjRzDNLmxgJKnjZXbglmmsKHFfwJbDzgFWzbmbJmFvcWZTXJMhVg" class="box">
-            <img src="images/Main.png" alt="web ui design">
-            <p>Website Design</p>
-          </a>
         </div>
-        <div class="mobile outer">
-          <div class="price">
-            <div class="basic">
-              <p>Basic </p><p id="price"> $5</p>
+
+        <div class="outer_most">
+          <p class="heading">Mobile App Design</p>
+          <div class="outer">
+            <div class="price">
+              <div class="basic">
+                <p>Basic </p><p id="price"> $5</p>
+              </div>
+              <div class="standard">
+                <p>Standard <span>$105 </span></p><p id="price"> $55</p>
+              </div>
+              <div class="premium">
+                <p>Premium <span>$195 </span></p><p id="price"> $100</p>
+              </div>
             </div>
-            <div class="standard">
-              <p>Standard <span>$105 </span></p><p id="price"> $55</p>
-            </div>
-            <div class="premium">
-              <p>Premium <span>$195 </span></p><p id="price"> $100</p>
-            </div>
+            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw" class="box">
+              <img src="images/Mobile.png" alt="mobile ui design">
+            </a>
           </div>
-          <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw" class="box">
-            <img src="images/Mobile.png" alt="mobile ui design">
-            <p>Mobile App Design</p>
-          </a>
         </div>
+
       </div>
     </div>
 
