--- a/chaan.html
+++ b/chaan.html
@@ -117,7 +117,7 @@
                 <p>Premium <span>$275 </span></p><p id="price"> $135</p>
               </div>
             </div>
-            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=DmwnWsvCdtCwxmJbNNzGvvvSjjRzDNLmxgJKnjZXbglmmsKHFfwJbDzgFWzbmbJmFvcWZTXJMhVg" class="box">
+            <a href="https://www.fiverr.com/chaanbiz/provide-affordable-yet-fascinating-ui-website-template" class="box">
               <img src="images/Main.png" alt="web ui design">
             </a>
           </div>
@@ -137,7 +137,7 @@
                 <p>Premium <span>$195 </span></p><p id="price"> $100</p>
               </div>
             </div>
-            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#drafts?compose=jrjtXVXCLkzBZCBHGZLhwNgmqRmsmLLsSJGjZLZDtGxpbMtNMBKhKnbVlkBTXSBFzmmGqLjw" class="box">
+            <a href="https://www.fiverr.com/chaanbiz/mobile-app-ui-ux-design-and-template" class="box">
               <img src="images/Mobile.png" alt="mobile ui design">
             </a>
           </div>
