chaan html update

--- a/chaan.html
+++ b/chaan.html
@@ -99,7 +99,8 @@
     </div>
 
     <div class="discount">
-      <h2>This upcoming September 15!</h2>
+      <h2>Only this September 15!</h2>
+      <p>choose a service below and click the picture</p>
       <p>You'll be redirected to Fiverr for ordering</p>
       <div class="choices">
 
