styles and block update

--- a/chaan.html
+++ b/chaan.html
@@ -100,8 +100,8 @@
 
     <div class="discount">
       <h2>Only this September 15!</h2>
-      <p>choose a service below and click the picture</p>
-      <p>You'll be redirected to Fiverr for ordering</p>
+      <p class="directions first">choose a service below and click the picture</p>
+      <p class="directions">You'll be redirected to Fiverr for ordering</p>
       <div class="choices">
 
         <div class="outer_most">
