claim_note update

--- a/chaan.html
+++ b/chaan.html
@@ -75,7 +75,7 @@
         <h2>50% Discount!<br> Prepare to claim<br><span>at September 15, 2023</span></h2>
       </div>
       
-      <p class="claim_note">The discount will be available in</p>
+      <p class="claim_note">The discount is only available in</p>
       <div class="count_down">
         <div class="box">
           <h2 id="day">00</h2><span>days</span>
