--- a/chaan.html
+++ b/chaan.html
@@ -72,7 +72,7 @@
 
     <div class="deals flex" id="deals">
       <div class="label">
-        <h2>50% Discount!<br> Prepare to claim<br><span>at September 15, 2023</span></h2>
+        <h2>50% discount!<br> claim NOW!<br><span>September 15, 2023</span></h2>
       </div>
       
       <p class="claim_note">The discount is only available in</p>
