next discount update

--- a/chaan.html
+++ b/chaan.html
@@ -71,11 +71,11 @@
     </div>
 
     <div class="deals flex" id="deals">
-      <div class="label">
-        <h2>50% discount!<br> claim NOW!<br><span>September 15, 2023</span></h2>
+      <div class="label" id="claim_now">
+        <h2>25% discount!<br> prepare to claim<br><span>in October 10, 2023</span></h2>
       </div>
       
-      <p class="claim_note">The discount is only available in</p>
+      <p id="claim_note">The discount is only available in</p>
       <div class="count_down">
         <div class="box">
           <h2 id="day">00</h2><span>days</span>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="discount">
-      <h2>Only this September 15!</h2>
+      <h2>This upcoming October 10!</h2>
       <p class="directions first">choose a service below and click the picture</p>
       <p class="directions">You'll be redirected to Fiverr for ordering</p>
       <div class="choices">
@@ -109,13 +109,13 @@
           <div class="outer">
             <div class="price">
               <div class="basic">
-                <p>Basic <span>$65 </span></p><p id="price"> $30</p>
+                <p>Basic <span>$65 </span></p><p id="price"> $50</p>
               </div>
               <div class="standard">
-                <p>Standard <span>$155 </span></p><p id="price"> $75</p>
+                <p>Standard <span>$155 </span></p><p id="price"> $120</p>
               </div>
               <div class="premium">
-                <p>Premium <span>$275 </span></p><p id="price"> $130</p>
+                <p>Premium <span>$275 </span></p><p id="price"> $220</p>
               </div>
             </div>
             <a href="https://www.fiverr.com/chaanbiz/provide-affordable-yet-fascinating-ui-website-template" class="box">
@@ -132,10 +132,10 @@
                 <p>Basic </p><p id="price"> $5</p>
               </div>
               <div class="standard">
-                <p>Standard <span>$105 </span></p><p id="price"> $50</p>
+                <p>Standard <span>$105 </span></p><p id="price"> $80</p>
               </div>
               <div class="premium">
-                <p>Premium <span>$195 </span></p><p id="price"> $95</p>
+                <p>Premium <span>$195 </span></p><p id="price"> $155</p>
               </div>
             </div>
             <a href="https://www.fiverr.com/chaanbiz/mobile-app-ui-ux-design-and-template" class="box">
