counter if function update

--- a/chaan.html
+++ b/chaan.html
@@ -72,7 +72,7 @@
 
     <div class="deals flex" id="deals">
       <div class="label" id="claim_now">
-        <h2>25% discount!<br> prepare to claim<br><span>in October 10, 2023</span></h2>
+        <h2 id="label_h2">25% discount!<br> prepare to claim<br><span id="label_span">in October 10, 2023</span></h2>
       </div>
       
       <p id="claim_note">The discount is only available in</p>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="discount">
-      <h2>This upcoming October 10!</h2>
+      <h2 id="discount_h2">This upcoming October 10!</h2>
       <p class="directions first">choose a service below and click the picture</p>
       <p class="directions">You'll be redirected to Fiverr for ordering</p>
       <div class="choices">
