claim note update

--- a/chaan.html
+++ b/chaan.html
@@ -75,7 +75,7 @@
         <h2 id="label_h2">25% discount!<br> prepare to claim<br><span id="label_span">in October 10, 2023</span></h2>
       </div>
       
-      <p id="claim_note">The discount is only available in</p>
+      <p id="claim_note">The discount will be available in</p>
       <div class="count_down">
         <div class="box">
           <h2 id="day">00</h2><span>days</span>
