--- a/chaan.html
+++ b/chaan.html
@@ -99,7 +99,7 @@
     </div>
 
     <div class="discount">
-      <h2 id="discount_h2">This upcoming big event!</h2>
+      <h2 id="discount_h2">A big event! This upcoming New Year!</h2>
       <p class="directions first">choose a service below and click the picture</p>
       <p class="directions">You'll be redirected to Fiverr for ordering</p>
       <div class="choices">
